# ShitpostEngine

./: Cargo.toml  README.md
shaders/: triangle.slang
src/: main.rs
src/graphics/: mod.rs
src/memes/: mod.rs
src/windowing/: mod.rs
vulkan_c/: .gitignore  Cargo.toml  build.rs
vulkan_c/src/: lib.rs  wrapper_android.h  wrapper_wayland.h  wrapper_win32.h  wrapper_xlib.h
