[package]
name = "ShitpostEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.32.0"
thiserror = "2.0.18"
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_System", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
windows-api-utils = { version = "0.2.0", features = ["bit-ops"] }

vulkan_c = { path = "vulkan_c" }
